# RayTracingInOneWeekend

./: .gitignore  Book1.vcxproj  Camera.h  Dielectric.h  Material.h  Metal.h  README.md  Sphere.h  main.cpp
cpp/: Book1.sln  Book1.vcxproj  Hittable.h  HittableList.h  Lambertian.h  README.md  Random.h  Ray.h  Vec3.h  main.cpp
ispc/: CMakeLists.txt  Camera.h  Camera.ispc.h  HitRecord.h  HitRecord.ispc.h  Hittable.h  Hittable.ispc.h  HittableList.ispc.h  Material.h  Material.ispc.h  Random.h  Random.ispc.h  Ray.h  Ray.ispc.h  Renderer.ispc  Vec3.h  Vec3.ispc.h  build_linux.sh  build_macos.sh  build_windows.bat  main.cpp
rust/: Cargo.toml
rust/src/: camera.rs  dielectric.rs  hit_record.rs  hittable.rs  hittable_list.rs  lambertian.rs  main.rs  material.rs  metal.rs  random.rs  ray.rs  sphere.rs  vec3.rs
