[package]
name = "book1"
version = "0.1.0"
authors = ["Tanguy Fautre <tanguy@fautre.com>"]
edition = "2018"
description = "Ray Tracing In One Weekend"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_cpus = "1.11.1"
rand = "0.7.2"
rand_pcg = "0.2.1"
